5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1800_2564.log
== TEST (2019-06-11 11:11:42) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:12:04) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
0.925589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:13:14) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:13:26) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
0.964262
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:13:41) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
1.99387
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:13:42) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
1.6365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:13:42) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
4.26657
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
x: y: [0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
x: y:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:13:42) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
6.04346
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
x: y: [0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
x: y:
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
x: y:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:13:42) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
6.24141
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
x: y: [0 0 9]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
x: y:
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:13:47) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
0.976596
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:15:23) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>0y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
0.650279
-- ERROR:
  File "/home/codebench/codes/1800/2564/main.py", line 6
    if x[i]>0y[i]:
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:41) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>0y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- ERROR:
File "XXXX", line 6
    if x[i]>0y[i]:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:17:41) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>0y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- ERROR:
File "XXXX", line 6
    if x[i]>0y[i]:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:21:58) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:22:08) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
0.876079
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:22:14) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
0.895817
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:22:42) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
1.29807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 11:22:48) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
1.06752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:10:46) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[i]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
1.01873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2564/main.py", line 9, in <module>
    vet[i]=vet[1]+1
IndexError: index 6 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:45:28) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[1]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
1.14143
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
x: y: [7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
x: y: [0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
x: y: [12  1  0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 17:45:48) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[1]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:46:11) 
-- CODE:
from numpy import*
x = array(eval(input("x: ")))
y = array(eval(input("y: ")))
vet=zeros(3, dtype=int)
for i in range(size(x)):
	if x[i]>y[i]:
		vet[0]=vet[0]+1
	elif x[i]==y[i]:
		vet[1]=vet[1]+1
	elif x[i]<y[i]:
		vet[2]=vet[2]+1
print(vet)
-- EXECUTION TIME:
1.23172
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
